--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,9 +12,21 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>HotMovies</servlet-name>
+        <servlet-class>servlet.Servlet_HotMovies</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Jersey Web Application</servlet-name>
         <url-pattern>/webapi/*</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>HotMovies</servlet-name>
+        <url-pattern>/servlet/HotMovies</url-pattern>
+    </servlet-mapping>
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
 </web-app>
