--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>HotMovies</servlet-name>
         <servlet-class>servlet.Servlet_HotMovies</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Theaters</servlet-name>
+        <servlet-class>servlet.Servlet_Theaters</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Jersey Web Application</servlet-name>
         <url-pattern>/webapi/*</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>HotMovies</servlet-name>
         <url-pattern>/servlet/HotMovies</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Theaters</servlet-name>
+        <url-pattern>/servlet/Theaters</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
